FIX: WS getByCode getList and getAscendant